# opencode-client-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: code_search.cpp  config_manager.cpp  event_monitor.cpp  file_browser.cpp  interactive_chat.cpp  list_sessions.cpp  mcp_manager.cpp  model_comparison.cpp  multi_turn_chat.cpp  permission_handler.cpp  project_info.cpp  session_resume.cpp  spawn_server.cpp  streaming_chat.cpp  tools_explorer.cpp
include/opencode/: client.hpp  events.hpp  opencode.hpp  process.hpp  server.hpp  session.hpp  transport.hpp  types.hpp
src/: client.cpp  events.cpp  process_posix.cpp  process_win32.cpp  server.cpp  session.cpp  transport.cpp  types.cpp
